--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar col-12  position-fixed navbar-expand-lg navbar-white bg-white" style="z-index: 999;">
         <div class="container-fluid col-11 m-auto img-responsive">
           <a class="navbar-left" href="#"></a>
-          <img src="/img/logo trofeu.png" alt="" width="70" height="70">
+          <img src="./img/logo trofeu.png" alt="" width="70" height="70">
           
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -56,13 +56,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/img/7c7dfd994efd5d5766c8451ae32b4e4b.jpg" class="d-block w-100" alt="...">
+            <img src="./img/7c7dfd994efd5d5766c8451ae32b4e4b.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/img/pesquisa-diz-que-copa-do-mundo-arranhou-imagem-de-neymar-felipao-e-fred-b5e2aae1-20e7-41c1-b7e5-133d623a536e.jpg" class="d-block w-100" alt="...">
+            <img src="./img/pesquisa-diz-que-copa-do-mundo-arranhou-imagem-de-neymar-felipao-e-fred-b5e2aae1-20e7-41c1-b7e5-133d623a536e.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/img/SCZAKOS53PG6UIOANJPTX4U27U.jpg" class="d-block w-100" alt="...">
+            <img src="./img/SCZAKOS53PG6UIOANJPTX4U27U.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -78,7 +78,7 @@
       <br><br>
       <div class="card-deck col-6 m-auto">
         <div class="card">
-          <img class="card-img-top" src="/img/bandeira.png" alt="Card image cap">
+          <img class="card-img-top" src="./img/bandeira.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
