--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
       <hr>
 
       <div class=" col-11 m-auto">
-        <h2 class="text-center">miha pica</h2>
-        <p class="text-center"> meu saco malhado</p>
+        <h2 class="text-center">Word cup 2022 Catar</h2>
+        <p class="text-center"> 2022</p>
       </div> 
       
     
