--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Jogos</a>
+                <a class="nav-link active" aria-current="page" href="jogos.html">Jogos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Seleções</a>
@@ -163,7 +163,7 @@
 
       <div class=" col-11 m-auto">
         <h2 class="text-center">Word cup 2022 Catar</h2>
-        <p class="text-center"> 2022</p>
+        <p class="text-center">2022</p>
       </div> 
       
     
@@ -173,4 +173,5 @@
 
   
   </body>
+ 
 </html>
